# gw_eccentricity

./: .gitattributes  .gitignore  LICENSE  README.md  README_developers.md  pyproject.toml  pytest.ini  run_tests  setup.py  test_fork+pr.md
data/: README.md  SXS_BBH_2305_22.h5  ini_freqs_q1.0_chi10.0_chi20.0_seobnre.csv  model_ecc_vs_measured_ecc.csv
docs/: .readthedocs.yaml  requirements.txt
examples/: egw_from_ESIGMAHM_demo.ipynb  egw_from_SEOBNRv5EHM_demo.ipynb  egw_from_TEOBResumS-DALI_demo.ipynb  gw_eccentricity_demo.ipynb  load_waveform_demo.ipynb
gw_eccentricity/: README.md  __init__.py  compare_methods.py  eccDefinition.py  eccDefinitionUsingAmplitude.py  eccDefinitionUsingAmplitudeFits.py  eccDefinitionUsingFrequency.py  eccDefinitionUsingFrequencyFits.py  eccDefinitionUsingResidualAmplitude.py  eccDefinitionUsingResidualFrequency.py  exceptions.py  filter.py  gw_eccentricity.py  load_data.py  plot_settings.py  rational_fit.py  spin_filter.py  truncate_waveform_by_flow.py  utils.py
investigations/: compare_methods.ipynb  diagnostics-NR.ipynb  read_EOB_posteriors.ipynb  truncate_waveform_by_flow.ipynb
measureEccentricity/: README.md  eccDefinition.py  eccDefinitionUsingAmplitude.py  eccDefinitionUsingFrequency.py  eccDefinitionUsingFrequencyFits.py  eccDefinitionUsingResidualAmplitude.py  eccDefinitionUsingResidualFrequency.py  group_nr_waveforms.py  load_data.py  measureEccentricity.py  plot_settings.py  utils.py
measure_ecc/: measureEccentricity.py
notebook/: compare_methods.ipynb  compare_omega_averaging_methods.ipynb  debugFrequencyFits.ipynb  (+14 more)
(+130 files in other folders)
